--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "flutter_application_1",
     "short_name": "flutter_application_1",
-    "start_url": ".",
+    "start_url": "https://khatristudio.github.io",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
